test-cases/negative/test_058_call_without_function_name.lay
# negative test: call statement without function name
# expected: parser should reject this

call
  print 'hello'


